finally I fixed email on mobile version

--- a/css/records2.css
+++ b/css/records2.css
@@ -2026,7 +2026,7 @@ h6 {
 		letter-spacing: 0px;
 	}
 	h2 {
-		font-size: 28px;
+		font-size: 5vw;
 		line-height: 32px;
 		letter-spacing: 0px;
 	}
